--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,53 @@
     color: #2D0000;
   }
   #hero{
-    background-image: url(../assets/images/hero1.jpg);
+    background-image: url(../assets/images/herocf.jpg);
     background-size: cover;
     width: 100vw;
+    height: 100vh;
+    position: relative;
   }
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    pointer-events: none; /* Allow pointer events to pass through */
+  }
+  .text {
+    font-family: "DM Sans", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+      text-align: left;
+      color: white;
+      position: absolute;
+      top: 40%;
+      right: 35%;
+      max-width: 800px;
+      /* transform: translate(-50%, -50%);
+      animation: fadeInDown 4s ease forwards 2; */
+    }
+    
+    .text h1 {
+      font-size: 3em;
+      /* animation: fadeInUp 3s ease 1s forwards; */
+    }
+    
+    .text p {
+      /* font-size: 1.5em; */
+      /* animation: fadeInUp 3s ease 1.5s forwards; */
+      font-size: 20px;
+    }
+    #discover-button {
+        background-color: #B60037;
+        color: #ffffff;
+        font-size: 14px;
+        font-weight: 700;
+        height: 51px;
+        letter-spacing: 2px;
+        border: 0;
+        width: 200px;
+        cursor: pointer;
+    }
