--- a/css/main.css
+++ b/css/main.css
@@ -147,3 +147,13 @@
         width: 100px;
         height: auto;
       }
+      #grid-form {
+        width: 100vw;
+        height: 100vh;
+        background-color: #F8F4F4;
+        display: flex;
+      }
+      #grid-container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+      }
