--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@
       color: white;
       position: absolute;
       top: 35%;
-      right: 40%;
+      right: 35%;
       max-width: 800px;
       /* transform: translate(-50%, -50%);
       animation: fadeInDown 4s ease forwards 2; */
@@ -149,10 +149,10 @@
       }
       #grid-form {
         width: 100vw;
-        height: 100vh;
+        /* height: 100vh; */
         background-color: #F8F4F4;
         /* display: flex; */
-        padding: 120px;
+       padding: 100px;
       }
       #grid-container {
             display: grid;
@@ -179,9 +179,6 @@
         /* max-width: 500px; */
         padding: 20px;
         background-color: white;
-      }
-      .grid-item img {
-
       }
       #form-container {
         background-color: #B40000;
@@ -232,12 +229,14 @@
     top: 50%; /* Move the div 50% from the top of its parent */
     left: 50%; /* Move the div 50% from the left of its parent */
     transform: translate(-50%, -50%);
+    z-index: 1;
    }
   #footer {
     background-color: #2D0000;
     height: 80vh;
     padding: 150px;
     text-align: center;
+    position: relative;
   }
   #footer img {
     max-width: 200px;
@@ -250,4 +249,56 @@
     color: white;
     text-decoration: none;
     margin-left: 30px;
+  }
+  #footer-cover {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* gap: 150px; */
+  }
+  #footer::before,
+  #footer::after {
+    content: "";
+    position: absolute;
+    width: 80%; /* Adjust this value to control the length of the lines */
+    height: 0.08px;
+    background-color: rgb(155, 158, 163);
+    top: 65%; /* Adjust the position of the lines vertically */
+    left: 10%; /* Adjust the position of the lines horizontally */
+    transform: translateY(-50%);
+  }
+  
+  #footer::after {
+    top: 83%; /* Adjust the position of the second line vertically */
+  }
+  #footer-button {
+    /* font-family: "DM Sans", sans-serif; */
+    font-size: 14px;
+    font-weight: 700;
+    height: 51px;
+    letter-spacing: 2px;
+    background-color: white;
+    color: #2D0000;
+    width: 200px;
+    cursor: pointer;
+    border: 0;
+  }
+  #footer-button:hover {
+    background-color: #2D0000;
+  color: #ffffff;
+  border: 1px solid  white;
+  }
+  #footer-icons a {
+    color: white;
+    margin-left: 20px;
+  }
+  #footercover-two i {
+    color: red;
+  }
+  #footercover-two a {
+    color: white;
+    text-decoration: none;
+  }
+  #footercover-two a:hover {
+    color: red;
   }
