--- a/css/main.css
+++ b/css/main.css
@@ -302,3 +302,62 @@
   #footercover-two a:hover {
     color: red;
   }
+  .swiper {
+    width: 60%;
+    /* height: 50%; */
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 60%;
+    /* height: 50%; */
+    object-fit: cover;
+  }
+
+  .swiper {
+    width: 60%;
+    height: 150px;
+    /* margin: 20px auto; */
+  }
+  .swiper2 {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide2 {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide2 img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  #body-review img {
+    position: relative;
+  }
+  #experience {
+    background-color: #B40000;
+    width: 200px;
+    height: 200px;
+    text-align: center;
+    color: white;
+    position: absolute;
+    /* top: -10%; */
+    /* left: -10%; */
+  }
